<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Med Manager</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="medication_name">Medication Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="interval">Time Interval</string>
    <string name="hours">Hours</string>
    <string name="start_date">Start date</string>
    <string name="add_medication">Add Medication</string>
    <string name="cancel">Cancel</string>

    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast -->
    <string name="tomorrow">Tomorrow</string>

    <string name="month_string">Medications in %s</string>

    <string name="format_date">%d/%d/%d %d:%d</string>
    <string name="format_percentage">
        <xliff:g id="percentage">%1.0f</xliff:g> %%
    </string>

    <string name="main_notification_channel_name">Primary</string>

    <string name="medication_manager_notification_title">It\'s time to take your meds</string>
    <string name="medication_manager_notification_body">It\'s time to take your meds. You need to take %s now!! your life depends on it !!!</string>


    <string name="title_activity_medications">MedicationsActivity</string>
    <string name="medication_list">Medication List</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_a_medication">Add a Medication +</string>
    <string name="no_medications">You have no medications</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="january">January</string>
    <string name="all">All</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="loading_medications_error">Error while loading Medications</string>
    <string name="title_format">%s Medications</string>
    <string name="saved_message">Medication saved successfully</string>
    <string name="description">Description</string>
    <string name="end_date">End date</string>
    <string name="percentage">%d%%</string>
    <string name="date_format">%d/%d/%d %d:%d</string>
    <string name="status_completed">Completed</string>
    <string name="status_not_started">Not started</string>
    <string name="hours_format">%s Hours</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="medications_count">Medications Count</string>
    <string name="sex">Sex</string>

</resources>
