<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="addeditmedication.AddEditMedicationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/medication_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_name"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/enter_description"
                android:inputType="textCapSentences"
                android:gravity="top"
                 />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/interval_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:textColor="@color/colorPrimary"

                />

            <TextView
                android:text="@string/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <TextView
                android:text="@string/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/start_date_tv"
                android:layout_height="wrap_content"
                android:text="16/12/17"
                android:textSize="18sp"
                android:layout_marginStart="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">


            <TextView
                android:text="End date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/end_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16/12/17"
                android:textSize="18sp"
                android:layout_marginStart="18sp"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
