<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.AddMedicationActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:foreground="?selectableItemBackground"
        card_view:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/medication_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medication_name"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interval"
                    android:textSize="18sp"
                    />

                <Spinner
                    android:id="@+id/interval_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/colorPrimary"

                    />

                <TextView
                    android:text="@string/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/start_date_tv"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/date/ddmmyy"
                    android:textSize="18sp"
                    android:layout_marginStart="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:text="End date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/end_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/date/ddmmyy"
                    android:textSize="18sp"
                    android:layout_marginStart="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:id="@+id/cancel_add_layout"
                >

                <LinearLayout
                    android:id="@+id/cancel_layout"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/cancel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_close_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_layout"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/add_medication_tv"
                        android:layout_marginStart="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_done_black_24dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_medication"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
